--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	<footer>
 		<script src="lib/jquery-v1.11.1.js"></script>
 	    <script src="lib/angular-v1.2.22.js"></script>
+	    <script src="lib/angular-route.js"></script>
 		<script>
 		function TestCtrl($scope) {
 			$scope.title = "Woohoo!";
