--- a/index copy.html
+++ b/index copy.html
@@ -15,6 +15,9 @@
     <script src="lib/angular-v1.2.22.js"></script>
 
     <script>
+      var app = angular.module('app', [
+          'ngRoute'
+        ])
       function TestCtrl($scope) {
         $scope.title = "Example title! (Change or delete me)";
       }
